// Kept for backwards compatibility (see packages/services/cluster/src/types.rs)


syntax = "proto3";

package rivet.backend.cluster;

message Pools {
    repeated rivet.backend.cluster.Pool pools = 1;
}

message Pool {
    PoolType pool_type = 1;
    // See docs on failover (/docs/packages/cluster/SERVER_PROVISIONING.md#creating-a-new-server)
    repeated Hardware hardware = 2;
    uint32 desired_count = 3;
    uint32 min_count = 6;
    uint32 max_count = 4;
    // Server drain timeout In ms
    uint64 drain_timeout = 5;
}

enum PoolType {
    JOB = 0;
    GG = 1;
    ATS = 2;
}

message Hardware {
    string provider_hardware = 1;
}

enum BuildDeliveryMethod {
    TRAFFIC_SERVER = 0;
    S3_DIRECT = 1;
}

